Refactor: Melhoria na arquitetura do GameService